--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@wdio/local-runner": "^9.14.0",
     "@wdio/mocha-framework": "^9.14.0",
     "@wdio/spec-reporter": "^9.14.0",
-    "allure-commandline": "^2.34.0"
+    "allure-commandline": "^2.34.0",
+    "wdio-intercept-service": "^4.4.1"
   },
   "dependencies": {
     "dotenv": "^16.5.0"
