--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "wdio-intercept-service": "^4.4.1"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "supertest": "^7.1.1"
   }
 }
